[Feat]추천모듈 슬라이드 캐러셀 기능 추가 완료

--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@
                     <span class="label">믿고 보는 웨이브 에디터 추천작</span>
                   </h1>
                 </div>
-                <div>
+                <div
+                  class="recomaned_container"
+                  style="
+                    display: flex;
+                    width: 200%;
+                    transition: 0.3s ease-in-out;
+                  "
+                >
+                  <!-- container st -->
                   <div
                     class="swiper-container swiper portrait-cell swiper-container-horizontal"
                   >
@@ -252,149 +260,129 @@
                           </a>
                         </div>
                       </div>
-
-                      <!-- 가짜 -->
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div
-                        class="swiper-slide"
-                        style="width: 240px; margin-right: 10px"
-                      >
-                        <div class="thumb portrait">
-                          <a href="/">
-                            <div class="thumb-image">
-                              <div class="no-thumb" style="display: none">
-                                <span class="alt-text">남의연애</span>
-                              </div>
-                              <div class="picture-area">
-                                <picture>
-                                  <img
-                                    src="asset/content03.webp"
-                                    alt="데드드리프트"
-                                  />
-                                </picture>
-                              </div>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-
-                      <!-- 가짜끝 -->
                     </div>
                   </div>
+                  <!-- container end -->
+
+                  <!-- 가짜 container  -->
+                  <div
+                    class="swiper-container swiper portrait-cell swiper-container-horizontal"
+                  >
+                    <div class="swiper-wrapper">
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content01.webp"
+                                    alt="곽준빈기사식당"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/contents02.webp"
+                                    alt="남의연애"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img src="/asset/content04.webp" alt="/" />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content05.webp"
+                                    alt="하트시그널"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- 가짜끝 -->
                 </div>
                 <button
                   type="button"
