added class recommend_container

--- a/index.html
+++ b/index.html
@@ -136,14 +136,7 @@
                     <span class="label">믿고 보는 웨이브 에디터 추천작</span>
                   </h1>
                 </div>
-                <div
-                  class="recomaned_container"
-                  style="
-                    display: flex;
-                    width: 200%;
-                    transition: 0.3s ease-in-out;
-                  "
-                >
+                <div class="recommend_container">
                   <!-- container st -->
                   <div
                     class="swiper-container swiper portrait-cell swiper-container-horizontal"
