--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content01.webp"
+                                    src="asset/content06.webp"
                                     alt="곽준빈기사식당"
                                   />
                                 </picture>
@@ -298,7 +298,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/contents02.webp"
+                                    src="asset/content07.webp"
                                     alt="남의연애"
                                   />
                                 </picture>
@@ -321,7 +321,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content03.webp"
+                                    src="asset/content08.webp"
                                     alt="데드드리프트"
                                   />
                                 </picture>
@@ -343,7 +343,7 @@
                               </div>
                               <div class="picture-area">
                                 <picture>
-                                  <img src="/asset/content04.webp" alt="/" />
+                                  <img src="/asset/content09.webp" alt="/" />
                                 </picture>
                               </div>
                             </div>
@@ -364,7 +364,7 @@
                               <div class="picture-area">
                                 <picture>
                                   <img
-                                    src="asset/content05.webp"
+                                    src="asset/content10.webp"
                                     alt="하트시그널"
                                   />
                                 </picture>
@@ -379,12 +379,12 @@
                 </div>
                 <button
                   type="button"
-                  class="second-button-prev"
+                  class="second-button-prev second-button-disabled"
                   tabindex="0"
                 ></button>
                 <button
                   type="button"
-                  class="second-button-next"
+                  class="second-button-next second-button-disabled"
                   tabindex="0"
                 ></button>
                 <a href="/" class="btn-more all">더보기</a>
